--- a/gtja/templates/base.html
+++ b/gtja/templates/base.html
@@ -136,14 +136,14 @@ function goNextPage(){
 
 </script>
 </head>
-
+<title>Research Report</title>
 <body>
+<h2>Research Report</h2>
 
-<hr>
 <div class="content", >
 	<div class="postbody" id="postbody1">
 		<h4 class="posttile">title</h4><br>
-		<strong class="postdate"> 2015.11.2</strong><br>
+		<span class="postdate"> 2015.11.2</span><br>
 		<div class="postabstract">
 			<strong>Abstract .........</strong>
 		</div>
@@ -193,8 +193,8 @@ function goNextPage(){
 	<span>/</span>
 	<span id="total_pages">100</span>
 	
-	<span>Rows:</span>
-	<span id="rows_per_page">5</span>
+	<span hidden="hidden">Rows:</span>
+	<span id="rows_per_page" hidden="hidden">5</span>
 	
 	<a id="home_page" href="javascript:goHomePage()">Home</a>
 	<a id="previous_page" hidden="hidden" href="javascript:goPreviousPage()">Previous</a>
